<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_msgs</name>
  <version>0.3.5</version>
  <description>Messages for the multi-group interface of motoman_driver.</description>
  <author>Thiago de Freitas</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_msgs</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclcpp</depend>
  
  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>

